--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:vWuaHv6w42OAha8GJ9oyw+0HYuPoNLWD+dxhEotYJEk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=scrailw2_railkalarang
+DB_USERNAME=scrailw2_rksc
+DB_PASSWORD=alMZlNV_Z?*p
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
